[tool.poetry]
name = "<pkg_name>"
version = "0.0.0"
description = "<pkg_description>"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre_commit = "*"

[tool.poetry.scripts]
<pkg_name> = "<pkg_name>.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
