[tool.poetry]
name = "drews_league"
version = "0.0.0"
description = "Codebase for compiling fantasy football historical data for Drew's League."
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre_commit = "*"

[tool.poetry.scripts]
drews_league = "drews_league.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
